<?xml version="1.0" encoding="UTF-8"?>
<package>
	<name>dj_vector</name>
	<version>0.1.0</version>
	<description>Get Vector to play songs, Alexa style</description>

	<maintainer email="sng1488@gmail.com">Spencer Ng</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>rospy</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>

	<run_depend>message_runtime</run_depend>
    <run_depend>anki_vector_ros</run_depend>
    <run_depend>ros_vosk</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>

</package>